set name, slug, handle directory splash e icon

--- a/app.json
+++ b/app.json
@@ -1,17 +1,16 @@
 {
   "expo": {
-    "name": "song_mobile",
-    "slug": "song_mobile",
+    "name": "SONG",
+    "slug": "song",
     "platforms": [
       "ios",
-      "android",
-      "web"
+      "android"
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./src/assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./src/assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
