--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "expo": {
-    "name": "SONG",
+    "name": "Song",
     "slug": "song",
+    "description": "Aplicativo de letras dos Cds jovens e hinário da Igreja Adventista do Sétimo Dia",
     "platforms": [
       "ios",
       "android"
@@ -22,6 +23,10 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "package": "com.solucaocriativaoficial.song_music",
+      "versionCode": 1
     }
   }
 }
