--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.6",
+    "@react-native-community/netinfo": "^5.9.2",
     "@react-navigation/native": "^5.5.0",
     "@react-navigation/stack": "^5.4.1",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
-    "expo-network": "~2.1.0",
     "expo-sqlite": "~8.1.0",
     "lottie-react-native": "~2.6.1",
     "react": "~16.9.0",
